k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calorie-backend
  namespace: calorie-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calorie-backend
  template:
    metadata:
      labels:
        app: calorie-backend
    spec:
      containers: 
      - name: backend
        image: dushicavelkova/calorie-backend:latest
        ports:
        - containerPort: 5000
