k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calorie-db
  namespace: calorie-tracker
spec:
  serviceName: db-service
  replicas: 1

  selector:
    matchLabels:
      app: calorie-db

  template:
    metadata:
      labels:
        app: calorie-db

    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine

          ports:
            - containerPort: 5432
              name: dbport

          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: db-persistent-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
