k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calorie-frontend
  namespace: calorie-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calorie-frontend
  template:
    metadata:
      labels:
        app: calorie-frontend
    spec:
      containers:
      - name: frontend
        image: dushicavelkova/calorie-frontend:latest
        ports:
        - containerPort: 80
