k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: calorie-tracker
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: calorie-db
  type: ClusterIP
